busqueda demanda add properties

--- a/appsettings.json
+++ b/appsettings.json
@@ -29,11 +29,11 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     //PRODUCCIÓN
-    "LAFT": "User id=laft;Password=pr0t3ct4;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.107)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7))); Min Pool Size=50",
-    "TIMEP": "User Id=INSUDB;Password=PROT$PROD;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.107)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7)))"
+    //"LAFT": "User id=laft;Password=pr0t3ct4;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.107)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7))); Min Pool Size=50",
+    //"TIMEP": "User Id=INSUDB;Password=PROT$PROD;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.107)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7)))"
     //DESARROLLO
-    //"LAFT": "User id=laft;Password=laftdev;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.145)(PORT=1528))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7))); Min Pool Size=50",
-    //"TIMEP": "User Id=INSUDB;Password=devtime55;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.145)(PORT=1528))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7)))"
+    "LAFT": "User id=laft;Password=laftdev;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.145)(PORT=1528))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7))); Min Pool Size=50",
+    "TIMEP": "User Id=INSUDB;Password=devtime55;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.23.2.145)(PORT=1528))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7)))"
     //QA
     //"LAFT": "User id=laft;Password=laftqa;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST = 172.23.2.144)(PORT=1527))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7))); Min Pool Size=50",
     //"TIMEP": "User Id=INSUDB;Password=vtcalidad30;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST = 172.23.2.144)(PORT=1527))(CONNECT_DATA=(SERVICE_NAME=VISUALTIME7)))"
